--- a/style.css
+++ b/style.css
@@ -76,9 +76,21 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  z-index: 1;
 }
 
-
+#container .game-rank #back-button {
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  border: 3px solid #334;
+  padding: 10px 20px;
+  background-color: transparent;
+  color: rgb(248, 252, 0);
+  font-size: 30px;
+  z-index: 10000;
+}
 
 #container .game-ready {
   position: absolute;
@@ -101,6 +113,7 @@ body {
   background-color: transparent;
   color: rgb(248, 252, 0);
   font-size: 30px;
+  z-index: 2;
 }
 
 
@@ -115,6 +128,7 @@ body {
   background-color: transparent;
   color: rgb(251, 255, 0);
   font-size: 20px;
+  z-index: 2;
 }
 
 #container #instructions {
